www/public_src/styles/search.less
#datasetSelector {
  min-height: 500px;
  overflow-y: hidden;
  z-index: 11;
  .dataset-list {
    transition: background-color 300ms linear;
    // &:hover {
    //   background-color: #eee;
    // }
    &.active, &.active:hover {
      background-color: @themeDefault;
      h1, h2, h3, h4, h5 {
        color: #fff;
      }
      p {
        color: #ddd !important;
      }
      a {
        color: #fff;
      }
    }
    .md-button, .md-button:hover{
      background-color: transparent;
    }
    .metadata-toggle {
      margin-top: 0px;
    }
    .metadata {
      overflow-x: auto;
      padding: 0px 15px;
      outline: none;
      p {
        font-size: 12px;
        line-height: 15px;
        padding-right: 60px;
      }
    }
  }
  .secondary-top {
    .md-secondary-container {
      margin-top: 2px;
    }
  }

  .category-selector {
    margin-top: -16px;
  }

  .dataset-counts {
    margin-top: -16px;
  }

  .advanced-options {
    margin-bottom: -1%;
  }

  .search-tools {
    flex-shrink: 0;
  }

  .search-tools {
    flex-shrink: 0;
  }

  #datasetList {
    padding-bottom: 0px;
    padding-top: 0px;
    overflow-y: auto;
    width: 100%;
  }
}

#selectionText {
  height: calc(40vh ~"-" @headerHeight ~"-" @processHeaderHeight);
  max-height: calc(40vh ~"-" @headerHeight ~"-" @processHeaderHeight);
  min-height: 150px;
  overflow: hidden !important;

  @media (max-width: 959px) and (min-width: 0) {
    .md-toolbar-tools {
      height: 64px;
      min-height: 64px;
      font-size: 70%;
    }
  }

  md-card-content {
    overflow-y: auto;
  }
  .selection-text-header {
    flex-shrink: 0px;
    md-toolbar {
      background-color: @cardHeader;
      border-bottom: 1px solid @borderColor;
      color: black;
      overflow: hidden;
      line-height: 14px;
    }
  }

}


md-card.filter-card  {
  height: calc(60vh ~"-" @headerHeight ~"-" @processHeaderHeight ~"+" 32px);
  max-height: calc(60vh ~"-" @headerHeight ~"-" @processHeaderHeight ~"+" 32px);
  margin-top: 0px;
  margin-bottom: 0px;
  min-height: 200px;

  md-card-header{
    height: 60px;
    line-height: 60px;
  }
  a.toolbar-link {
    margin-left: 10px;
  }

  .md-subheader{
    background-color: #fff;
  }
  md-list {
    padding-top: 0px;
  }
}

#searchRow {
  max-width:100%;
  overflow-x: auto;
  overflow-y: hidden;
  flex: 1 1 auto;
  height: calc(65vh ~"-" @headerHeight ~"-" (@processHeaderHeight + 20));
  max-height: calc(65vh ~"-" @headerHeight ~"-" (@processHeaderHeight + 20));
  min-height: 280px;

  md-list-item {
    text-transform: capitalize;
  }
}

#searchOverlay {
  top: calc(@headerHeight ~"+" @processHeaderHeight);
  z-index: 10;
  background-color:  rgba(0,0,0,.5);
  pointer-events: none;
  color: @inverseText;
  padding: 10%;
  font-size: 21px;
  text-transform: capitalize;
  letter-spacing: 2px;

  p {
    margin-bottom: 25px;
  }
}

plain-text-query {
  line-height: 2.2;
}
md-list-item.disabled {
  background-color: rgba(211, 211, 211, 0.27);
  color: #808080;
  font-style: italic;
}
md-checkbox.md-default-theme:not([disabled]) .md-icon, md-checkbox:not([disabled]) .md-icon {
  border-color: @themeAccent;
}

